[project]
name = "fasttracker"
version = "0.1.1"
description = "FastTracker tracking module"
requires-python = ">=3.12"
dependencies    = [
    "cython-bbox>=0.1.5",
    "lap>=0.5.12",
    "loguru>=0.7.3",
    "motmetrics>=1.4.0",
    "pycocotools>=2.0.8",
    "scipy>=1.15.3",
    "tabulate>=0.9.0",
    "thop>=0.1.1.post2209072238",
]

[project.optional-dependencies]
full = ["torch>=2.1.0", "torchvision>=0.20.0", "torchaudio>=2.1.0"]

[tool.setuptools.packages.find]
include = ["fasttracker*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"